# cornbot

./: 99-usb-serial.rules  README.md  package.xml  setup.cfg  setup.py
arduino_code/Teensy-toArduino_CORNBOT_IMU_FEEDTHROUGH_2024/: Teensy-toArduino_CORNBOT_IMU_FEEDTHROUGH_2024.ino
arduino_code/Teensy_6_Axis_Feeler_Code_2024/: Teensy_6_Axis_Feeler_Code_2024.ino
backup_arduino_code/Cornbot_IMU_2024/: Cornbot_IMU_2024.ino
config/: params.yml
cornbot/: USB Serial ports reset each time the system is restarted How to prevent that - Ask Ubuntu.html  daq_control_function.py  ekf_node.py  feeler_contact_state_id.py  feeler_function_2024.py  feeler_localization.py  feeler_state_plotter.py  gps_gnss_function_2024.py  imu_node_2024.py  joint_state_publisher.py  motor_control_function_2024.py  navigation_node.py  odom_tf_broadcaster.py  odom_tf_broadcaster2.py  odom_tf_broadcaster2_copy.py  pure_pursuit_with_feelers.py  serial_test.py  set_waypoint.py  simple_feeler_data_node_July_25_2024.py  testing.py  waypoint_list1  waypoint_nav1.py  waypoint_nav2.py  waypoint_nav2_1.py  waypoint_nav_with_feelers1.py  xbox_teleop.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
launch/: cornbot_launch.py  cornbot_launch_2024.py  feeler_launch.py
log/: .~lock.49395ea8-b71b-46fc-b9ee-68737c21cf65.xls#  db251fca-02cb-4ecc-bd10-8267db5b05cb.xls  latest_build
matlab_sim/: AstarPurePursuitwith2FeelerMappingGREAT.m  ContactDetectionModelTUNEDTOREALWORLD.m  ContactDetectionModelTUNEDTOVIRTUALforLONGERPADDLES.m
rviz/: cornbot_config.rviz
urdf/: cornbot.urdf
(+96 files in other folders)
